# rstrial

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
rstrial_cli/: Cargo.toml
rstrial_cli/src/: commands.rs  main.rs
rstrial_cli/src/commands/: check.rs  convert.rs
rstrial_converter/: Cargo.toml
rstrial_converter/src/: converter.rs  lib.rs
rstrial_converter/src/converter/: aozora.rs  vfm.rs  vivliostyle.rs
rstrial_converter/src/converter/aozora/: line_converter.rs  line_item_converter.rs  manuscript_converter.rs  section_converter.rs
rstrial_converter/src/converter/vfm/: line_converter.rs  line_item_converter.rs  manuscript_converter.rs  section_converter.rs
rstrial_converter/src/converter/vivliostyle/: line_converter.rs
rstrial_parser/: Cargo.toml
rstrial_parser/src/: lib.rs  parser.rs  tokens.rs
rstrial_parser/src/parser/: line_item_parser.rs  line_parser.rs  manuscript_parser.rs  richtext_parser.rs  section_parser.rs  terminator_parser.rs
rstrial_parser/src/tokens/: line.rs  line_item.rs  section.rs
test/fixtures/: cat.txt
