[package]
name = "rstrial_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive", "unicode"] }
rstrial_parser = { path = "../rstrial_parser" }
rstrial_converter = { path = "../rstrial_converter" }
pretty_env_logger = "0.5.0"
